              instead of many different constructors and assignment operators
              for the different native C++ integer types, there is now a single
              templated constructor and a single templated assignment operator
              to handle _all_ native C++ integer types.  These can also take
              128-bit integers (which were not supported before).
            - Now supports equality testing (==, !=) against all native C++
              integer types, not just long.
        Class Isomorphism<dim>:
            - The increment operators are now available in all dimensions
              (not just dimensions ≤ 6).
        Class IsoSigEncodingAPI, IsoSigTypeAPI:
            - New documentation-only classes that explain how encodings and
              signature types for isomorphism signatures are expected to behave.
        Class LargeInteger:
            - See the changes listed under the sister class Integer above.
        Class Laurent<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class LPCol<...>:
            - This is now an internal class in the namespace regina::detail,
              and its template parameters have changed.  End users should have
              no need to refer to LPCol<...> at all.
        Class LPConstraint...:
            - All linear programming constraint classes must now adhere to the
              new concept LPConstraint.
            - The constant nConstraints and the routine constrain() are both
              removed, and replaced with the class constant array constraints[].
            - The arguments to addRows() have changed: it no longer takes an
              initial tableaux, but instead takes the relevant triangulation
              and column permutation.
        Class LPConstraintAPI, LPConstraintBase, LPConstraintSubspace: